cmake_minimum_required(VERSION 3.10)
project(CosmicDefender C)
set(CMAKE_C_STANDARD 99)
find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
add_executable(game game.c)
target_link_libraries(game ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})
if(APPLE)
target_compile_options(game PRIVATE -Wno-deprecated-declarations)
endif()
if(UNIX AND NOT APPLE)
target_link_libraries(game m)
endif()

